--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "ts-discord-bot-template",
   "version": "1.0.0",
-  "description": "A Discord bot template using discord.js, discord.js-commando, and TypeScript. Supports auto-compilation.",
   "main": "dist/index.js",
   "scripts": {
     "debug": "nodemon -e js,ts --watch src --exec \"npm run build:ts && npm run start:app\"",
@@ -11,11 +9,12 @@
   "author": "abyssal512",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "discord.js": "^11.6.4",
     "discord.js-commando": "^0.10.0",
-    "sqlite": "^3.0.3"
+    "sqlite": "^3.0.6"
   },
   "devDependencies": {
-    "@types/node": "^12.6.2"
+    "nodemon": "^2.0.4",
+    "@types/node": "^12.12.58"
   }
 }
