--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.20.0",
     "discord.js": "^11.6.4",
     "discord.js-commando": "^0.10.0",
+    "lodash": "^4.17.20",
     "sqlite": "^3.0.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.161",
     "@types/node": "^12.12.58",
     "nodemon": "^2.0.4"
   }
