feat: use crontab-style execution

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NzIxMDU5MjY3OTQ3Mzk3MTIw.XuPAxg.DFNEpiLbD6rD2F3y0CV7zDPHKtU",
-    "prefix": ".",
+    "token": "",
+    "prefix": "",
     "supportServerInvite": ""
 }
