--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
-    "prefix": "",
+    "token": "NzIxMDU5MjY3OTQ3Mzk3MTIw.XuPAxg.zLzkaWszxmX_RxgX3-aEpB3zGSo",
+    "prefix": ".",
     "supportServerInvite": ""
 }
