--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "debug": "nodemon -e js,ts --watch src --exec \"npm run build:ts && npm run start:app\"",
-    "build:ts": "tsc",
-    "start:app": "node dist/src/index.js"
+    "debug": "nodemon -e js,ts --watch src --exec \"npm run build && npm run start\"",
+    "build": "tsc",
+    "start": "node dist/src/index.js"
   },
   "author": "abyssal512",
   "license": "MIT",
